<resources>
    <string name="app_name">RxJava2_Backpressure</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="testone">testOne</string>
    <string name="test_five">test five</string>
    <string name="test_six">test six</string>
    <string name="test_seven">test seven</string>
    <string name="test_four">test four</string>
    <string name="test_three">test three</string>
    <string name="test_two">test two</string>
</resources>